project/stage/semantic_tests/reject/return_arr2.ul
void main() {

}

int [1] foo() {
    return gimmeArr();
}

int [2] gimmeArr() {
    int [2] arr;
    return arr;
}
